# ibus-voice

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: package.yml
docs/design/: overview.md
docs/implementation/: plan.md  release.md  runtime.md
docs/research/: koe-gap-analysis.md  local-asr-model-selection.md
docs/user/: configuration.md  getting-started.md
examples/: README.md  cleanup-system-prompt.txt  cleanup-user-prompt.txt  config.toml  dictionary.txt  system_prompt.txt  user_prompt.txt
postmortem/: README.md
scripts/: build-deb.sh  build-rpm.sh  install-coli.sh  install-local.sh  install-system.sh  refresh-ibus.sh  stage-coli.sh  stage-local-asr.sh  uninstall-local.sh  uninstall-system.sh
src/ibus_voice/: __init__.py  audio.py  cleanup.py  cli.py  config.py  correction.py  engine.py  history.py  ibus_service.py  local_asr.py  metadata.py  provider_initialization.py  types.py
src/ibus_voice/providers/: __init__.py  base.py  factory.py  gemini.py  http.py  listenhub.py  openai.py  openai_transcriptions.py
tests/: test_audio.py  test_cleanup.py  test_cli.py  test_config.py  test_engine.py  test_history.py  test_ibus_service.py  test_local_asr.py  test_metadata.py  test_provider_initialization.py  test_providers.py
